work on banner apis
